add core sturcture for the home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>hello man</h1>
+    <header>Header content</header>
+    <section>Main image</section>
+    <section>Club Ethos</section>
+    <section>Running, ocation, distances and times</section>
+    <footer>
+        Social media
+    </footer>
 </body>
 </html>
