--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             </ul>
         </nav>
     </header>
-    <section>Main image</section>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+    </section>
     <section>Club Ethos</section>
     <section>Running, ocation, distances and times</section>
     <footer>
