--- a/index.html
+++ b/index.html
@@ -113,7 +113,20 @@
         </div>
     </section>
     <footer>
-        Social media
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fab fa-youtube-square"></i></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
     <!-- font awsome script-->
     <script src="https://kit.fontawesome.com/a7cfe14bd2.js" crossorigin="anonymous"></script>
