--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">Sign Up</a>
+                    <a href="signup.html">Sign Up</a>
                 </li>
                 <li>
                     <a href="gallery.html" class="active">Gallery</a>
@@ -27,8 +27,8 @@
                 <li>
                     <a href="index.html" class="active">Home</a>
                 </li>
-                
-                
+
+
             </ul>
         </nav>
     </header>
