--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">Sign Up</a>
+                    <a href="signup.html">Sign Up</a>
                 </li>
                 <li>
-                    <a href="gallery.html" >Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
                 </li>
-                
-                
+
+
             </ul>
         </nav>
     </header>
